# neco

./: .gitignore
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml
app/src/: lib.rs  main.rs
app/src/api/: lm_studio.rs  mod.rs
app/src/core/: mod.rs  prompt.rs  response.rs  runn.rs  script.rs  shell.rs
docs/: api.md  dependencies.html  design.md
scripts_local/: install_neco.ps1  neco.ps1  neco.sh
