[package]
name = "neco"
version = "0.1.0"
edition = "2021"
description = "CLI to generate shell commands via LM Studio (OpenAI-compatible API)"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

[dev-dependencies]
mockall = "0.13"
wiremock = "0.6"
